# monterey-beagle

./: Beaglebone Pinmux Worksheet.xlsx  CMakeLists.txt  DM-GPIO-Test-00A0.dtbo  DM-GPIO-Test.dts  Disc_Pins.cfg  PWM_Pins.cfg  Readme.txt  bone_six_pwm-00A0.dtbo  bone_six_pwm-00A0.dts  montereymuxcfg.sh
CMakePlatforms/: BeagleBoneBlack.cmake
src/: i2c-dev.h  monterey-beagle.cpp  monterey-beagle.h
